KH-251: Fix upload button not vertically aligned middle with firefox.

--- a/koodisto-ui/src/main/webapp/css/virkailija.css
+++ b/koodisto-ui/src/main/webapp/css/virkailija.css
@@ -453,3 +453,8 @@ input[type="radio"] {
     padding:10px;
     border: 1px solid #dddddd;
 }
+
+/* Fix firefox input type=file button position */
+.form-control.firefox-input-type-file-fix {
+    height: auto;
+}
